--- a/e/style.css
+++ b/e/style.css
@@ -128,19 +128,6 @@ nav img{
     background: transparent;
     position: relative;
     cursor: pointer;
-    margin: 10px;
-}
-.book{
-     display: inline-block;
-    text-decoration: none;
-    color:black;
-    border: 2px solid black;
-    padding: 6px 20px;
-    font-size: 13px;
-    background:linear-gradient(#f44336, #9c3b0e);
-    position: relative;
-    cursor: pointer;
-    margin: 17px;
 }
 .hero-btn:hover{
     border: 1px solid #f44336;
@@ -188,44 +175,7 @@ nav .fa{
   background-color:#fff;
   height:5px;
   width:100%;
-  margin-top: 30px;
-  margin-bottom: 25px;
  
-}
-
-.about{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.about .image{
-    flex:1 1 40rem;
-    margin-top: 30px;
-    margin-right: 15px;
-    margin-bottom: 30px;
-
-}
-
-.about .image img{
-    height:65vh;
-    width:100%;
-}
-
-.about .content{
-    flex:1 1 40rem;
-}
-
-.about .content h3{
-    font-size: 3.5rem;
-    color:#666;
-}
-
-.about .content p{
-    font-size: 1.5rem;
-    color:#666;
-    padding:1rem 0;
 }
 
 /*------Services-----*/
@@ -493,17 +443,16 @@ padding: 18px 0;
 /*-----About us----*/
 
 .sub-header{
-    height: 75vh;
+    height: 50vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/971.jpg);
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/background.jpg);
     background-position: center;
     background-size: cover;
     text-align: center;
     color: #fff;
 }
 .sub-header h1{
-    margin-top: 30px;
-    padding-top: 190px;
+    margin-top: 75px;
 }
 .about-us{
     width: 80%;
@@ -657,141 +606,19 @@ padding: 18px 0;
 .footer .credit a{
     color:#f39c12
 }
-.subb-header{
-    height: 20vh;
-    width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/971.jpg);
-    background-position: center;
-    background-size: cover;
-    text-align: center;
-    color: #fff;
-}
-.subb-header h1{
-    margin-top: 30px;
-    padding-top: 30px;
-}
 
-.reg-form {
-  background: #fff;
-  box-sizing: border-box;
-  box-shadow: 1px 2px 6px rgba(0, 0, 0, 0.4);
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 15px auto;
-  padding: 15px;
-  width: 100%;
-  border: 2px solid black;
-}
- 
-.form-heading {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 36px;
-  font-weight: bold;
-  margin: 5px;
-}
- 
-.helper-text {
-  font-size: 12px;
-  margin-bottom: 10px;
-  text-align: right;
-}
-.field-row {
-  position: relative;
-  width: 100%;
-}
- 
-.form-label {
-  display: inline-block;
-  font-size: 16px;
-  margin: 0 5px 5px 0;
-  text-align: right;
-  width: 100px;
-}
- 
-.field {
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-  display: inline-block;
-  font-size: 16px;
-  padding: 10px;
-  margin-bottom: 15px;
-  width: 240px;
-}
-.field.field-short {
-  width: 70px;
-}
-.message {
-  display: inline-block;
-}
- 
-:required + .message::before {
-  content: "* ";
-}
- .text-field:focus:required:valid {
-  outline: green solid 2px;
-}
-.text-field:focus:required:invalid {
-  outline: orange solid 2px;
-}
-.date-field:focus:in-range {
-  outline: green solid 2px;
-}
-.date-field:focus:out-of-range {
-  outline: orange solid 2px;
-}
- 
-.website-field:focus:valid {
-  outline: green solid 2px;
-}
-.website-field:focus:invalid {
-  outline: orange solid 2px;
-}
-.form-button {
-  background: linear-gradient(180deg, #808080, #2a2a2a);
-  border: none;
-  border-radius: 0;
-  color: white;
-  display: inline-block;
-  padding: 10px;
-  font-size: 16px;
-}
-.first-name-field:focus:invalid + .message::after {
-  color: orange;
-  content: "Required your first name";
-}
- 
-.last-name-field:focus:invalid + .message::after {
-  color: orange;
-  content: "Required your last name";
-}
- 
-.dob-field:focus:out-of-range + .message::after {
-  color: orange;
-  content: "Date is out of range";
-}
- 
-.tel-field:focus:invalid + .message::after {
-  color: orange;
-  content: "Required telephone number";
-}
- 
-.email-field:focus:invalid + .message::after {
-  color: orange;
-  content: "Required email address";
-}
-.hs-field:focus:invalid + .message::after {
-  color: orange;
-  content: "Required high school name";
-}
- 
-.address-field:focus:invalid + .message::after {
-  color: orange;
-  content: "Required permanent address";
-}
- 
-.website-field:focus:invalid + .message::after {
-  color: orange;
-  content: "Required valid URL";
-}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
