--- a/asli/style.css
+++ b/asli/style.css
@@ -182,6 +182,7 @@ nav .fa{
 @media(max-width:900px){
     .header{
         padding: -150px;
+        width: 100%;
     }
     .text-box h1{
     font-size: 20px;
