--- a/asli/style.css
+++ b/asli/style.css
@@ -192,7 +192,7 @@ nav .fa{
     }
     .dev2{
         position: relative;
-        top: 70px;
+        top: 60px;
     }
     .text-box h1{
     font-size: 20px;
@@ -611,9 +611,14 @@ h3{
     margin-bottom: 40px;
     padding-top: 100px;
 }
-@media(max-width: 700px){
+@media(max-width: 900px){
+    .cta{
+        min-height: 80vh;
+    }
     .cta h1{
         font-size: 24px;
+        width: 45%;
+        margin: auto;
     }
 }
 
