--- a/asli/style.css
+++ b/asli/style.css
@@ -184,7 +184,7 @@ nav .fa{
         height: auto;
     }
     .header{
-        min-height: 100vh;
+        min-height: 130vh;
     }
     .dev{
         position: relative;
@@ -264,6 +264,7 @@ nav .fa{
     font-family: 'Roboto', sans-serif; 
     padding:1rem;
     margin-right: 3rem;
+    text-align: justify;
 }
 
 .aboutt{
@@ -424,7 +425,7 @@ nav .fa{
 }
 
 .service .row .content{
-  text-align: left;
+  text-align: justify;
   padding:0 3rem;
 }
 
@@ -542,7 +543,7 @@ h1{
 }
 p{
     color: #777;
-    font-size: 14px;
+    font-size: 20px;
     font-weight: 300;
     line-height: 22px;
     padding: 10px;
@@ -721,16 +722,15 @@ padding: 18px 0;
 
 .contact .heading{
     color:#444;
-    padding:1rem;
+    padding-top:4rem;
+    margin-top: 40px;
     font-size: 4rem;
     text-align: center;
 }
 
 .contact .row{
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    flex-wrap: wrap;
+    display: block;
+    
 }
 
 .contact .row form{
@@ -747,8 +747,7 @@ padding: 18px 0;
 .contact .row form .box{
     height: 5rem;
     width: 49%;
-    border: .7rem solid #eee;
-    
+    border: .2rem solid #eee;
     padding: 0 5rem;
     margin: 1rem 0;
     font-size: 1.7rem;
@@ -1084,9 +1083,15 @@ margin-bottom: 20px
 
 .service-card .heading h5{
 color: #0a0a0a;
-font-weight: 500;
-font-size: 20px;
-line-height: 1.3
+font-weight: 700;
+font-size: 22px;
+line-height: 1.3;
+}
+.service-card .heading h3{
+color: #1b1919;
+font-weight: 700;
+font-size: 12px;
+line-height: 15px;
 }
 .service-cardd .heading h5{
 color: #0a0a0a;
@@ -1105,11 +1110,13 @@ line-height: 1.3
 .service-card .info{
 color: #0a0a0a;
 line-height: 1.7;	
+text-align: justify;
 }
 
 .service-cardd .info{
 color: #0a0a0a;
 line-height: 1.7;	
+font-size: 15px;
 }
 
 .service-card .info-link{
@@ -1155,9 +1162,6 @@ margin: 10px 0px;
 width: 100%;
 margin: 10px 0px;
 }
-
-
-
 
 
 
