--- a/asli/style.css
+++ b/asli/style.css
@@ -4,12 +4,16 @@
 
 *{
     font-family: 'Open Sans', sans-serif;
-    margin:0; padding:0;
+    margin:0; 
+    padding:0;
     box-sizing: border-box;
-    border:none; outline: none;
+    border:none;
+     outline: none;
     text-decoration: none;
     line-height: normal;
     transition: all .2s linear;
+    max-width: 100%;
+    height: auto;
 }
 
 *::selection{
@@ -39,7 +43,8 @@ header{
     align-items: center;
     justify-content: space-between;
     position: fixed;
-    top:0; left: 0;
+    top:0; 
+    left: 0;
     z-index: 1000;
     padding:1.5rem 7%;
     background:rgb(82, 138, 139);
@@ -289,6 +294,7 @@ nav .fa{
 
 .aboutt .contentt{
     flex:1 1 40rem;
+    margin-top: 60px;
 }
 
 .aboutt .contentt h2{
@@ -344,6 +350,8 @@ nav .fa{
     margin-top: 6px;
 }
 @media (max-width: 900px) {
+
+    
     .abouttt {
         display: flex;
         align-items: center;
@@ -400,7 +408,7 @@ nav .fa{
 
 /*------Services-----*/
 .service{
-  
+  margin-top: 40px;
   width: 100vw;
   text-align: center;
 }
@@ -420,12 +428,12 @@ nav .fa{
 }
 
 .service .row .image img{
-  width:50vw;
+  width:200vw;
   height:55vh;
 }
 
 .service .row .content{
-  text-align: justify;
+  text-align: left;
   padding:0 3rem;
 }
 
@@ -451,92 +459,6 @@ nav .fa{
 }
 
 
-/*------Course-----*/
-.course{
-    margin-bottom: 25px;
-}
-.course .heading{
-    color:#444;
-    padding:1rem;
-    font-size: 4rem;
-    text-align: center;
-}
-
-.course .box-container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.course .box-container .box{
-    width:20rem;
-    border:.1rem solid rgba(0,0,0,.3);
-    position: relative;
-    margin:1.1rem;  
-}
-
-.course .box-container .box img{
-    height:12rem;
-    padding: 10px;
-    width: 100%;
-    object-fit: cover;
-}
-
-.course .box-container .box .content{
-    padding:0.5rem;
-}
-
-.course .box-container .box .content .stars i{
-    color:#f39c12;
-    font-size: 1.2rem;
-    padding:1rem .1rem;
-}
-
-.course .box-container .box .content .title{
-    color:#444;
-    font-size: 1.8rem;
-}
-
-.course .box-container .box .content .title:hover{
-    text-decoration: underline;
-}
-
-.course .box-container .box .content p{
-    padding:1rem 0;
-    color:#666;
-    font-size: 1.3rem;
-}
-
-.course .box-container .box .content .info{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: .5rem;
-    border-top: .1rem solid rgba(0,0,0,.3);
-}
-
-.course .box-container .box .content .info h3{
-    font-size: 1.1rem;
-    padding:1rem;
-    color:#666;
-}
-
-.course .box-container .box .content .info h3 i{
-    color:#f39c12;
-}
-
-.course .box-container .box .price{
-    position: absolute;
-    top: 11.8rem;
-    right: 3rem;
-    height: 2rem;
-    line-height: rem;
-    text-align: center;
-    border-radius: 50%;
-    color: yellowgreen;
-    font-size: 2rem;
-}
 h1{
     font-size: 36px;
     font-weight: 600;
@@ -549,78 +471,13 @@ p{
     padding: 10px;
 }
 
-.row{
-    margin-top: 5%;
-    display: flex;
-    justify-content: space-between;
-}
-.course-col{
-    flex-basis: 31%;
-    background: #f5dadd;
-    border-radius: 10px;
-    margin-bottom: 5%;
-    padding: 20px 12px;
-    box-sizing:border-box;
-    transition: 0.5s;
-}
+
 h3{
     text-align: center;
     font-weight: 600;
     margin: 10px 0;
 }
-.course-col:hover{
-    box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
-}
-@media(max-width:700px){
-    .row{
-        flex-direction: column;
-    }
-    
-    
-}
 
-/*------testimonials-------*/
-.testimonials{
-    width: 80%;
-    margin: 25px auto;
-    text-align: center;
-    
-}
-.testimonials .heading{
-    color:#444;
-    padding:1rem;
-    font-size: 4rem;
-    text-align: center;
-}
-.testimonials-col{
-    flex-basis: 44%;
-    border-radius: 10px;
-    margin-bottom: 5%;
-    text-align: left;
-    background: #fff3f3;
-    padding: 25px;
-    cursor: pointer;
-    display: flex;
-}
-.testimonials-col img{
-    height: 40px;
-    margin-left: 5px;
-    margin-right: 30px;
-    border-radius: 50%;
-}
-.testimonials-col p{
-    padding: 0;
-}
-.testimonials-col h3{
-    margin-top: 15px;
-    text-align: left;
-}
-@media(max-width: 700px){
-    .testimonials-col img{
-       margin-left: 0px;
-       margin-right: 15px;
-    }
-}
 /*-----Call to Action----*/
 
 .cta{
@@ -974,7 +831,7 @@ padding: 18px 0;
   content: "Required valid URL";
 }
 .service-wrp{
-background: #a6dbbe ;
+background: white;
 background-size: cover;
 background-position: center center;
 background-repeat: no-repeat;
@@ -984,7 +841,7 @@ padding-bottom: 60px
 }
 
 .service-wrpp{
-background: #94d6b0 ;
+background: white;
 background-size: cover;
 background-position: center center;
 background-repeat: no-repeat;
@@ -1110,7 +967,7 @@ line-height: 1.3
 .service-card .info{
 color: #0a0a0a;
 line-height: 1.7;	
-text-align: justify;
+text-align: center;
 }
 
 .service-cardd .info{
