--- a/asli/style.css
+++ b/asli/style.css
@@ -573,7 +573,7 @@ padding: 18px 0;
     color:#fff;
 }
 .contact{
-    background:linear-gradient(90deg,#05993e, #031257);
+    background:white;
     
 }
 
