--- a/asli/style.css
+++ b/asli/style.css
@@ -350,32 +350,42 @@ nav .fa{
     padding-left:146px;
     margin-top: 6px;
 }
-@media (max-width: 900px) {
 
-    
+@media (max-width: 900px) {
+    .aboutt{
+        margin: 15px;
+    }
+
+    .aboutt .image{
+        width: 100px;
+        height: 50px;
+        margin-bottom:190px;
+
+    }
     .abouttt {
         display: flex;
         align-items: center;
         justify-content: center;
         flex-wrap: wrap;
+        margin: 15px;
     }
     .abouttt .contenttt {
         flex: 1 1 40rem;
     }
     .abouttt .contenttt h2 {
-        padding: 0 30%;
+        padding: 0;
         font-size: 35px;
         color: #666;
     }
     .abouttt .contenttt h3 {
-        padding-left: 30%;
+        padding: 0;
         font-size: 25px;
         color: #666;
     }
     .abouttt .contenttt p {
         font-size: 20px;
         color: #666;
-        padding: 0 30%;
+        padding: 0;
     }
 }
     
