--- a/asli/style.css
+++ b/asli/style.css
@@ -356,12 +356,8 @@ nav .fa{
         margin: 15px;
     }
 
-    .aboutt .image{
-        width: 100px;
-        height: 50px;
-        margin-bottom:190px;
-
-    }
+    .
+    
     .abouttt {
         display: flex;
         align-items: center;
