--- a/asli/style.css
+++ b/asli/style.css
@@ -358,6 +358,7 @@ nav .fa{
   .aboutt .image{
       display: inline-block;
       padding: 0;
+      margin: 0;
   }
     .aboutt .contentt{
         margin-top: 10px;
