--- a/asli/style.css
+++ b/asli/style.css
@@ -192,6 +192,7 @@ nav .fa{
         max-width: 100%;
         height: auto;
     }
+   
     .header{
         min-height: 100vh;
     }
@@ -239,19 +240,45 @@ nav .fa{
         padding: 30px;
     }
 }
+.free{
+    min-height: 40vh;
+    width: 100%;
+    background:linear-gradient(90deg,#05993e, #031257);
+    margin-top: 45px;
+}
 
+.free h1{
+    
+    text-align: center;
+    font-size: 50px;
+    color: white;
+}
+
+.free h3{
+    text-align: center;
+    top: 20px;
+    font-size: 30px;
+    color: white;
+    
+    margin-top: 20px;
+}
 
 .know{
+    
    
-    margin-top: 75px;
+    margin-top: 12px;
     padding: 0px 25px;
     text-align: center;
 
 }
+.know .more .know-more{
+    min-height: 97vh;
+}
+
 .know .more .know-more h1{
     margin-bottom: 30px;
     text-align: center;
-    font-size: 60px;
+    font-size: 40px;
     margin-top: 30px;
 }
 
@@ -273,7 +300,29 @@ nav .fa{
     
 }
 
+@media (max-width: 900px){
+    .know {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        margin: 15px;
+    }
+    .know .more .know-more {
+        flex: 1 1 40rem;
+    }
+    .know .more .know-more h1 {
+        padding: 0;
+        font-size: 25px;
+        color: #666;
+    }
+    .know .more .know-more p {
+        font-size: 20px;
+        color: #666;
+        padding: 0;
+    }
 
+}
 
 .about{
     display: flex;
@@ -1144,10 +1193,196 @@ margin: 10px 0px;
 }
 
 
+.intro{
+    min-height: 85vh;
+    width: 100%;
+    background:white;
+    margin-top:40px ;
+    position: relative; 
+}
+.intro .introtext h1{
+    position: relative;
+    top: 130px;
+    left: 100px;
+    font-size: 50px;
+}
+.intro .introtext h2{
+    position: relative;
+    margin-top: 30px;
+    top: 160px;
+    left: 100px;
+    font-size: 22px;
+    color: rgb(87, 85, 85);
+}
 
 
+.intro .introtext p{
+    position: relative;
+    top: 300px;
+    left: 100px;
 
 
+}
+.aboutc{
+    background: white;
+    margin-top: 10px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    min-height: 85vh;
+    width: 100%;
+    position: relative; 
+}
+.aboutc .sect{
+    max-width: 1140px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.aboutc .sect .about-sec{
+    width: 24%;
+    margin: 10px 0;
+   
+}
+.aboutc  h1{
+    font-size: 45px;
+    text-align: center;
+    margin-bottom: 70px;
+}
+.aboutc  h3{
+    font-size: 16px;
+    text-align: center;
+    margin-bottom: 30px;
+}
+.aboutc .sect .about-sec h2 {
+font-size: 32px;
+font-weight: 300;
+line-height: 1.5;
+color: rgb(14, 13, 13);
+text-align: center;
+}
+.aboutc .sect .about-sec p {
+font-size: 17px;
+line-height: 1.5;
+text-align: center;
+}
+
+.dev-team{
+    background: white;
+    margin-top: 10px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    min-height: 93vh;
+    width: 100%;
+    position: relative; 
+}
+.dev-team .teams{
+    max-width: 1240px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.dev-team .teams .dev-sec{
+    width: 24%;
+    margin: 10px 0;
+    border: 1px solid rgb(208, 208, 221);
+    
+
+}
+
+.dev-team  h1{
+    font-size: 35px;
+    text-align: center;
+    margin-bottom: 70px;
+}
+.dev-team  h3{
+    font-size: 12px;
+    text-align: center;
+    margin-bottom: 10px;
+    color: grey;
+}
+.dev-team .teams .dev-sec img{
+    position: relative;
+    left:100px;
+    padding: 10px;
+    border-radius: 100%;
+
+}
+
+.dev-team .teams .dev-sec h2 {
+font-size: 32px;
+font-weight: 300;
+line-height: 1.5;
+color: rgb(14, 13, 13);
+text-align: center;
+}
+.dev-team .teams .dev-sec p {
+font-size: 17px;
+line-height: 1.5;
+text-align: center;
+}
+
+.dev-team .teams .dev-sec .hero-btnn{
+    display: inline-block;
+    text-decoration: none;
+    color: rgb(36, 36, 36);
+    font-weight: bold;
+    padding:80px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    font-size: 17px;
+    background: rgb(240, 245, 245);
+    position: relative;
+    z-index: 2;
+    cursor: pointer;
+    margin-left: 35px;
+    margin-right: 15px;
+    margin-bottom: 10px;
+    
+    
+}
+
+.dev-services{
+    background: white;
+    margin-top: 10px;
+    
+    min-height: 85vh;
+    width: 100%;
+    position: relative; 
+}
+.dev-services .servi{
+    max-width: 970px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.dev-services .servi .dev-serv{
+    width: 48%;
+    margin: 10px 0;
+    margin-bottom: 20px;
+   
+   
+}
+.dev-services  h1{
+    font-size: 45px;
+    text-align: center;
+    margin-bottom: 20px;
+    font-weight: 500;
+}
+.dev-services .servi .dev-serv h2 {
+font-size: 22px;
+font-weight: 300;
+line-height: 1.5;
+color: rgb(14, 13, 13);
+text-align: center;
+}
+.dev-services .servi .dev-serv p {
+font-size: 15px;
+line-height: 1.5;
+text-align: center;
+}
 
 
 
