--- a/asli/style.css
+++ b/asli/style.css
@@ -111,7 +111,7 @@ nav img{
 }
 .text-box{
     width: 90%;
-    color: #fff;
+    color: rgb(173, 11, 11);
     position:absolute;
     top:50%;
     left:50%;
