--- a/asli/style.css
+++ b/asli/style.css
@@ -1389,10 +1389,11 @@ text-align: center;
         min-height: 50vh;
         padding: 0;
         margin-bottom: 20px;
-        margin-top: 30px;
+        
     }
 .intro .introtext h1{
-        font-size: 38px;
+         padding-top: 20px;
+        font-size: 36px;
         width: 85%;
         margin: 0;
         right: 0;
