--- a/asli/style.css
+++ b/asli/style.css
@@ -436,7 +436,8 @@ nav .fa{
         line-height: normal;
         font-size: 2.5rem;
         font-family: 'Roboto', sans-serif;   
-        margin: 0;     
+        margin: 0; 
+        margin-bottom: 20px;    
     }
  .free .one h5 {
         color: #fff;
@@ -452,7 +453,9 @@ nav .fa{
         height: 210px;
         padding: 0;
         margin: 0;
-        margin-top: 48px;
+        margin-top: 28px;
+        margin-bottom: 24px;
+
     }
 .kashmir{
         text-align: center;
