--- a/asli/style.css
+++ b/asli/style.css
@@ -359,12 +359,10 @@ nav .fa{
 
 .kashmir .know-more h2{
     line-height: normal;
-    font-size: 1.6rem;
+    font-size: 2rem;
     color:rgb(5, 5, 44);
-    
-    
+    text-align: left;
     margin-right: 3rem;
-    text-align: center;
 }
 .kashmir .know-more ul li{
     line-height: normal;
